--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -58,3 +58,14 @@
 	year={1912},
 	publisher={JSTOR}
 }
+@article{NeweyWest1987,
+	title = {A Simple, Positive Semi-definite, Heteroskedasticity and Autocorrelation Consistent Covariance Matrix},
+	author = {Newey, Whitney and West, Kenneth},
+	year = {1987},
+	journal = {Econometrica},
+	volume = {55},
+	number = {3},
+	pages = {703-08}
+}
+
+
